User Story 163: partners can add a title and paragraph to each species, for display on the species page.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1407 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -87,7 +87,12 @@
                     </div>
                 </div>
                 <div class="clearit"></div>
-                
+
+                {% if partner_heading or partner_blurb %}
+                  <h3>{{ partner_heading }}</h3>
+                  <p>{{ partner_blurb }} </p>
+                {% endif %}
+
                 <h3>Facts About...</h3>
                 <p>
                     {% if taxon.factoid|length > 0 %}
