On the pile/results page, apply the new style to the photos drop-down menu, photos grid, list view and tabs for visual design Phase 2.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1410 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_base.html
+++ b/gobotany/simplekey/templates/simplekey/_base.html
@@ -36,7 +36,16 @@
         <!--Shadowbox-->
         <script type="text/javascript" src="/static/scripts/shadowbox.js"></script>
         <script type="text/javascript">
-            Shadowbox.init();
+            function moveCloseLink() {
+                var cb = document.getElementById('sb-nav-close');
+                var tb = document.getElementById('sb-wrapper-inner');
+                if (tb) {
+                    tb.appendChild(cb);
+                }
+            }
+            Shadowbox.init({
+                onOpen: moveCloseLink
+            });
         </script>
         <!--Image Gallery Slider-->
         <script type="text/javascript"
