--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -97,10 +97,13 @@
 
                         <div class="show hidden">
                             <form id="results-display">
-                              <label for="image-type-selector">Show:</label>
-                              <select dojoType="dijit.form.Select"
-                                  id="image-type-selector"
-                                  name="image-type-selector">
+                                <img class="icon" alt=""
+                                    src="/static/images/icons/show-me.png">
+                                <label for="image-type-selector">Show
+                                    photos of:</label>
+                                <select dojoType="dijit.form.Select"
+                                    id="image-type-selector"
+                                    name="image-type-selector">
                               </select>
                           </form>
                         </div><!--Closes .show-->
