--- a/gobotany/static/css/shadowbox.css
+++ b/gobotany/static/css/shadowbox.css
@@ -2,7 +2,7 @@
 #sb-container{position:fixed;margin:0;padding:0;top:0;left:0;z-index:999;text-align:left;visibility:hidden;display:none;}
 #sb-overlay{position:relative;height:100%;width:100%;}
 #sb-wrapper{position:absolute;visibility:hidden;width:100px;}
-#sb-wrapper-inner{position:relative;border:1px solid #303030;overflow:hidden;height:100px;}
+#sb-wrapper-inner{position:relative;overflow:hidden;height:100px;}
 #sb-body{position:relative;height:100%;}
 #sb-body-inner{position:absolute;height:100%;width:100%;}
 #sb-player.html{height:100%;overflow:auto;}
@@ -10,7 +10,7 @@
 #sb-loading{position:relative;height:100%;}
 #sb-loading-inner{position:absolute;font-size:14px;line-height:24px;height:24px;top:50%;margin-top:-12px;width:100%;text-align:center;}
 #sb-loading-inner span{background:url(../images/shadowbox/loading.gif) no-repeat;padding-left:34px;display:inline-block;}
-#sb-body,#sb-loading{background-color:#060606;}
+#sb-body,#sb-loading{background: transparent;}
 #sb-title,#sb-info{position:relative;margin:0;padding:0;overflow:hidden;}
 #sb-title,#sb-title-inner{height:26px;line-height:26px;}
 #sb-title-inner{font-size:16px;}
@@ -18,7 +18,15 @@
 #sb-info-inner{font-size:12px;}
 #sb-nav{float:right;height:16px;padding:2px 0;width:45%;}
 #sb-nav a{display:block;float:right;height:16px;width:16px;margin-left:3px;cursor:pointer;background-repeat:no-repeat;}
-#sb-nav-close{background-image:url(../images/shadowbox/close.png);}
+#sb-nav-close{
+	position: absolute;
+	width: 16px;
+	height: 16px;
+	top: 24px;
+	right: 24px;
+	cursor: pointer;
+	background-image:url(../images/icons/close.png);
+	}
 #sb-nav-next{background-image:url(../images/shadowbox/next.png);}
 #sb-nav-previous{background-image:url(../images/shadowbox/previous.png);}
 #sb-nav-play{background-image:url(../images/shadowbox/play.png);}
@@ -29,18 +37,4 @@
 div.sb-message{font-size:12px;padding:10px;text-align:center;}
 div.sb-message a:link,div.sb-message a:visited{color:#fff;text-decoration:underline;}
 
-/* Styles to help move close button to upper right, from:
-   http://dustincaruso.com/javascript/move-the-shadowbox-js-close-button-to-the-upper-right/
- */
-#sb-title-inner {
-    width: 90%;
-}
-#sb-nav-close {
-    float: right;
-    width: 16px;
-    height: 16px;
-    display: block;
-    margin: -50px 0px 0px 0px;
-    background: url(../images/shadowbox/close.png) 2px 0px no-repeat;
-    cursor: pointer;
-}
+
