--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -66,7 +66,7 @@
                             <p class="vid">
                                 <a href="http://www.youtube.com/v/{{ pile.youtube_id }}" rel="shadowbox;height=380;width=640;">View a short video about this plant group.</a>
                             </p>
-                            <a class="plant-in-subgroup" href="{{ url }}">My plant is in this subgroup.</a>
+                            <a class="plant-in-subgroup" href="{{ url }}">My plant is in this subgroup</a>
                         </div>
                         <div class="clearit"></div>
                     </div><!--Closes .list-item-->
