--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -78,7 +78,7 @@
                             <p class="vid">
                                 <a href="http://www.youtube.com/v/{{ pilegroup.youtube_id }}" rel="shadowbox;height=380;width=640;">View a short video about this plant group.</a>
                             </p>
-                            <a class="plant-in-group" href="{{ url }}">My plant is in this group.</a>
+                            <a class="plant-in-group" href="{{ url }}">My plant is in this group</a>
                         </div>
                         <div class="clearit"></div>
                     </div><!--Closes .list-item-->
