On the pile/results page, style the plant preview popup as a modal dialog for visual design Phase 2. Images aren't added yet.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1413 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
+++ b/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
@@ -41,17 +41,12 @@
 						</div><!--Closes .controls-->
 					</div><!--Closes .img-gallery-->
 					
-					<div class="details">
-						<h4>Facts about...</h4>
-                        <p></p>
-						
+					<div class="details">					
 						<h4>Characteristics</h4>
 						<ul>
                             <li>CHARACTER: Value</li>
-                            <li>CHARACTER: Value</li>
-                            <li>CHARACTER: Value</li>
 						</ul>
-						<a class="get-more-info" href="taxon.php"></a>
+						<a class="get-more-info"></a>
 					</div><!--Closes .details-->
 					<div class="clearit"></div>
 					
