--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1455,17 +1455,34 @@ ul.full-description li ul li {
     margin: 1em 0 0;
     padding: 0;
 }
+
 table.status {
-	border-top: 1px solid #e2dfca;
-	margin: 0 0 15px 0;
+    border-top: 1px solid #c3d941;
+    margin: 0 0 15px;
+    width: 60%;
 }
-table.status th, table.status td {
-	padding: 5px 0;
-	border-bottom: 1px solid #e2dfca;	
+table.status th {
+    background: none repeat scroll 0 0 #b4d57f;
+    font-size: 10px;
+    padding: 3px 0;
+    text-align: center;
+    text-transform: uppercase;
 }
+table.status td {
+    border-bottom: 1px solid #c3d941;
+    padding: 5px 3px 5px 5px;
+    text-align: center;
+}
+table.status td:first-child {
+    text-align: left;
+    width: 120px;
+}
+/*
 table.status td:last-child {
 	text-align: right;
 }
+*/
+
 #taxon #sidebar .get-help-btn {
 	margin: 0 0 0 10px;	
 }
