Replace the species page image box with a scrolling box using the jQuery plugin SmoothDivScroll. Only works in Firefox for us so far, although.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1417 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_base.html
+++ b/gobotany/simplekey/templates/simplekey/_base.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="/static/css/shadowbox.css">
         <link rel="stylesheet"
             href="/static/css/jquery.jscrollpane.css">
+        <link rel="stylesheet" href="/static/css/smoothDivScroll.css">
         <link rel="shortcut icon" href="/static/images/branding/favicon.png">
         <!--[if IE 7]>
             <link rel="stylesheet" href="/static/css/ie7.css">
@@ -63,6 +64,12 @@
                 jq('.img-container').scrollable();
             });
         </script>
+
+        <!-- Smooth Div Scroll -->
+        <script
+            src="/static/scripts/jquery-ui-1.8.16.custom.min.js"></script>
+        <script
+            src="/static/scripts/jquery.smoothDivScroll-1.1-min.js"></script>
 
     </head>
 
