--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -489,7 +489,7 @@ Plant Listing Styles
 	overflow: hidden;
 	
 }
-.img-gallery .frame {
+.img-gallery .frame, #taxon #species-images {
 	width: 150px; /*160px;*/
     height: 139px;	
 	border: 5px solid rgba(255, 255, 255, 0.8);
@@ -1477,11 +1477,6 @@ table.status td:first-child {
     text-align: left;
     width: 120px;
 }
-/*
-table.status td:last-child {
-	text-align: right;
-}
-*/
 
 #taxon #sidebar .get-help-btn {
 	margin: 0 0 0 10px;	
@@ -1545,6 +1540,21 @@ a.enlarge:hover {
 #taxon a.more {
     cursor: pointer;
 }
+
+/* Smooth Div Scroll image area */
+#taxon #species-images {
+    height: 239px;
+    margin: 0 0 20px 0;
+    position: relative;
+    width: 700px;
+}
+#taxon #species-images div.scrollableArea img {
+    float: left;
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
+
 
 /*///////////////////////////**
 Getting Started Page Styles
