--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -30,17 +30,17 @@
                         <li>
                             <!-- TODO: need custom highlighter that does not excerpt the document title -->
                             {% if result.scientific_name %}
-                                <img src="/static/images/icons/leaficon.jpg"
+                                <img src="/static/images/icons/icon-leaf.png"
                                     alt="" title="Species page">
                                 <a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/species/{{ result.scientific_name|split:' '|at_index:'0'|lower }}/{{ result.scientific_name|split:' '|at_index:'1'|lower }}/">{% search_highlight result.title with query excerpt 'False' %}</a>
                             {% else %}
                                 {% if result.model_name == 'family' %}
-                                    <img src="/static/images/icons/familyicon.jpg"
+                                    <img src="/static/images/icons/icon-family.png"
                                         alt="" title="Family page">
                                     <a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/families/{{ result.name|lower }}/">{% search_highlight result.title with query excerpt 'False' %}</a>
                                 {% else %}
                                     {% if result.model_name == 'genus' %}
-                                        <img src="/static/images/icons/genusicon.jpg"
+                                        <img src="/static/images/icons/icon-genus.png"
                                             alt="" title="Genus page">
                                         <a href="http{% if request.is_secure %}s{% endif %}://{{ request.get_host }}/genera/{{ result.name|lower }}/">{% search_highlight result.title with query excerpt 'False' %}</a>
                                     {% else %}
